# draco4_motor_control

./: .gitignore  CMakeLists.txt  README.md
config/: JDLINK8_config_file.csv
docs/: api-reference.md  code-analysis.md  developer-guide.md  index.md  test-programs.md  usage-examples.md
include/: motor_configuration.hpp  motor_controller.hpp  motor_manager.hpp  motor_pdo_structures.hpp  motor_sdo_manager.hpp  network_controller.hpp  robot_controller.hpp
legacy/: CMakeLists.txt  README_DEPRECATED.md  draco_test.c  test_motor_detection.cpp  test_sdo_integration.cpp  test_soem_multi_instance.cpp
src/: motor_configuration.cpp  motor_constants.cpp  motor_controller.cpp  motor_manager.cpp  motor_sdo_manager.cpp  network_controller.cpp  robot_controller.cpp
tests/: test_ethercat_diagnostic.cpp  test_jd8_position.cpp  test_jd8_torque.cpp  test_jd8_velocity.cpp  test_multi_motor_hardware.cpp  test_multi_motor_simulation.cpp  test_multi_network_hardware.cpp  test_multi_network_simulation.cpp  test_network_controller.cpp
